--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp" />
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="index">
   <title>KorKao (Kaofrang Yanisa) Fansite</title>
   <meta name='description' content="Welcome to KorKao Official FanSite (Supporting for Kaofrang Yanisa or Kaofrang of BNK48's FanSite)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
