--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,9 @@
         divsToHide[i].style.display = "none"; // depending on what you're doing
       }
     }, 1);
+    document.addEventListener('contextmenu', function(event) {
+        event.preventDefault();
+    });
   </script>
 </head>
 
