--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp" />
   <meta name="robots" content="index">
-  <title>KorKao (Kaofrang Yanisa) Fansite</title>
-  <meta name='description' content="Welcome to KorKao Official FanSite (Supporting for Kaofrang Yanisa or Kaofrang of BNK48's FanSite)" />
+  <title>Kaofrang Space</title>
+  <meta name='description' content="Welcome to Kaofrang Space (Supporting for Kaofrang Yanisa or Kaofrang of BNK48's FanSite)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </meta>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
