Change CDN endpoint

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp" />
+  <link rel="icon" href="https://d1ygujs1u54o16.cloudfront.net/kf/korfranglogo.webp" />
   <meta name="robots" content="index">
   <title>Kaofrang Space</title>
   <meta name='description' content="Welcome to Kaofrang Space (Supporting for Kaofrang Yanisa or Kaofrang of BNK48's FanSite)" />
@@ -28,7 +28,7 @@
   <link href="https://cdn.jsdelivr.net/npm/@fontsource/chilanka@5.1.0/index.min.css" rel="stylesheet">
 
   <meta name="theme-color" content="#fb61ee" />
-  <link rel="apple-touch-icon" href="https://d3hhrps04devi8.cloudfront.net/kf/korfranglogo.webp" />
+  <link rel="apple-touch-icon" href="https://d1ygujs1u54o16.cloudfront.net/kf/korfranglogo.webp" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/react-draft-wysiwyg@1.15.0/dist/react-draft-wysiwyg.min.css"
     crossOrigin="anonymous">
 
